## Process this file with automake to produce Makefile.in.

helpdir = $(datadir)/doc/gqview-$(VERSION)/html
help_DATA = \
	gnu_fdl.txt	\
	gqview_faq.html	\
	index.html	\
	1_introduction.html	\
	2_main_window.html	\
	2_1_navigation.html	\
	2_2_menus.html	\
	2_3_layout.html	\
	2_4_file_pane.html	\
	2_5_folder_pane.html	\
	2_6_image_pane.html	\
	2_7_status_bar.html	\
	3_other_windows.html	\
	3_1_image_window.html	\
	3_2_image_properties.html	\
	4_image_management.html	\
	4_1_copy_move.html	\
	4_2_rename.html	\
	4_3_delete.html	\
	4_4_external_editing.html	\
	5_image_search.html	\
	5_1_search.html	\
	5_2_finding_duplicates.html	\
	6_collections.html	\
	7_sidebars.html	\
	7_1_exif.html	\
	7_2_sort_manager.html	\
	7_3_keywords.html	\
	8_image_presentation.html	\
	8_1_slideshow.html	\
	8_2_fullscreen.html	\
	9_printing.html	\
	10_options.html	\
	10_1_general.html	\
	10_2_image.html	\
	10_3_window.html	\
	10_4_filtering.html	\
	10_5_editor_commands.html	\
	10_6_advanced.html	\
	10_7_hidden.html	\
	11_reference.html	\
	11_1_command_line.html	\
	11_2_keyboard_shortcuts.html	\
	11_3_thumbnails.html	\
	11_4_management.html	\
	12_credits.html

EXTRA_DIST = $(help_DATA) template.html
