## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtkterm2_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gtkterm2_pixmaps_DATA = \
	gtkterm2.png

EXTRA_DIST = $(gtkterm2_pixmaps_DATA)
